# fcitx5-chinese-addons-with-asr

./: AGENTS.md  VOICE_INPUT_CONFIG.md
im/: CMakeLists.txt
im/table/: CMakeLists.txt  audiocapture.cpp  audiocapture.h  engine.cpp  engine.h  voiceinput.cpp  voiceinput.h  volcenginerecognizer.cpp  volcenginerecognizer.h
im/voiceinput/: CMakeLists.txt  asr_client.cpp  asr_client.h  audiocapture.cpp  audiocapture.h  voiceinput.cpp  voiceinput.h  volcenginerecognizer.cpp  volcenginerecognizer.h
test/: CMakeLists.txt  testaudiocapture.cpp  testtablevoiceintegration.cpp  testvoiceinputintegration.cpp  testvolcenginerecognizer.cpp
